[BUGFIX] Java CI 오류 해결 포맷 맞춤