@@ -18,57 +18,57 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class RecommendationService {
 
-    private final UserPreferenceRepository userPreferenceRepository;
-    private final ConcertRepository concertRepository;
+	private final UserPreferenceRepository userPreferenceRepository;
 
-    @Transactional(readOnly = true)
-    @SuppressWarnings("unchecked") // 형변환 경고 무시
-    public RecommendResponseDto getRecommendation(Long userId) {
-        // 1. UserPreference 조회
-        UserPreference preference = userPreferenceRepository.findById(userId)
-                .orElseThrow(() -> new EntityNotFoundException("선호도 정보가 없습니다. ID: " + userId));
+	private final ConcertRepository concertRepository;
 
-        Map<String, Object> rawPref = preference.getPreference();
+	@Transactional(readOnly = true)
+	@SuppressWarnings("unchecked") // 형변환 경고 무시
+	public RecommendResponseDto getRecommendation(Long userId) {
+		// 1. UserPreference 조회
+		UserPreference preference = userPreferenceRepository.findById(userId)
+			.orElseThrow(() -> new EntityNotFoundException("선호도 정보가 없습니다. ID: " + userId));
 
-        // 2. "items" 추출 (Object -> List<Map>)
-        List<Map<String, Object>> items = (List<Map<String, Object>>) rawPref.get("items");
+		Map<String, Object> rawPref = preference.getPreference();
 
-        if (items == null) {
-            return RecommendResponseDto.builder()
-                    .topArtists(List.of())
-                    .recommendedConcerts(List.of())
-                    .build();
-        }
+		// 2. "items" 추출 (Object -> List<Map>)
+		List<Map<String, Object>> items = (List<Map<String, Object>>) rawPref.get("items");
 
-        // 3. ArtistDto 리스트 생성 및 전체 장르 수집
-        List<RecommendResponseDto.ArtistDto> topArtists = items.stream()
-                .map(item -> RecommendResponseDto.ArtistDto.builder()
-                        .name((String) item.get("name"))
-                        .genres((List<String>) item.get("genres")) // Object -> List<String>
-                        .build())
-                .collect(Collectors.toList());
+		if (items == null) {
+			return RecommendResponseDto.builder().topArtists(List.of()).recommendedConcerts(List.of()).build();
+		}
 
-        // 추천에 사용할 장르 합치기 (중복 제거)
-        List<String> allPreferredGenres = topArtists.stream()
-                .filter(artist -> artist.getGenres() != null)
-                .flatMap(artist -> artist.getGenres().stream())
-                .distinct().toList();
+		// 3. ArtistDto 리스트 생성 및 전체 장르 수집
+		List<RecommendResponseDto.ArtistDto> topArtists = items.stream()
+			.map(item -> RecommendResponseDto.ArtistDto.builder()
+				.name((String) item.get("name"))
+				.genres((List<String>) item.get("genres")) // Object -> List<String>
+				.build())
+			.collect(Collectors.toList());
 
-        // 4. 공연 조회
-        String[] genreArray = allPreferredGenres.toArray(new String[0]);
-        List<Concert> matchedConcerts = concertRepository.findByGenresIn(genreArray);
+		// 추천에 사용할 장르 합치기 (중복 제거)
+		List<String> allPreferredGenres = topArtists.stream()
+			.filter(artist -> artist.getGenres() != null)
+			.flatMap(artist -> artist.getGenres().stream())
+			.distinct()
+			.toList();
 
-        // 5. 결과 반환
-        return RecommendResponseDto.builder()
-                .topArtists(topArtists)
-                .recommendedConcerts(matchedConcerts.stream()
-                        .map(c -> RecommendResponseDto.ConcertDto.builder()
-                                .concertName(c.getConcertName())
-                                .genres(c.getGenres())
-                                .posterImgUrl(c.getPosterImgUrl())
-                                .bookingUrl(c.getBookingUrl())
-                                .build())
-                        .collect(Collectors.toList()))
-                .build();
-    }
+		// 4. 공연 조회
+		String[] genreArray = allPreferredGenres.toArray(new String[0]);
+		List<Concert> matchedConcerts = concertRepository.findByGenresIn(genreArray);
+
+		// 5. 결과 반환
+		return RecommendResponseDto.builder()
+			.topArtists(topArtists)
+			.recommendedConcerts(matchedConcerts.stream()
+				.map(c -> RecommendResponseDto.ConcertDto.builder()
+					.concertName(c.getConcertName())
+					.genres(c.getGenres())
+					.posterImgUrl(c.getPosterImgUrl())
+					.bookingUrl(c.getBookingUrl())
+					.build())
+				.collect(Collectors.toList()))
+			.build();
+	}
+
 }
